# airflow_projects

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  teste.csv
earthquake_etl/: README.md  dag.py  main.py
earthquake_etl/utils/: load_config.py  mongodb_insgester.py
test_dags/: ml_dag.py  mssql_simple_dag.py  simple_dag.py  simple_mssql_process.py
